--- a/statics/data/SPEAKING/news.txt
+++ b/statics/data/SPEAKING/news.txt
@@ -1,6 +1,6 @@
 1. Are you very interested in the news?
 
-yes, I have to say that I am a big fan of the press. Were it not for the news,
+yes, I have to say that i'm a big fan of the press. Were it not for the news,
 hardly could I boost my knowledge and catch up with up-to-the-minute information.
 
 
